# buri-rust

./: .gitignore  .prettierrc  Cargo.toml  Cranky.toml  LICENSE  README.md  bun.lockb  jsconfig.json  package.json  test.buri  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: common-debian.sh
.github/: dependabot.yml
.github/workflows/: check-filename-delimiter.js  check-word-delimiter.js  ci.yml  nightly.yml  stale-branch.yml
buri/mjolnirjs/: debug.js  main.buri  run.js
docs/design/: README.md  code-blocks.md  collections.md  commandments.md  comments.md  control-flow.md  deprecation.md  expressions.md  functions.md  glossary.md  internal-reassignment.md  lists.md  modules.md  optional-chaining.md  platforms.md  primitives.md  records.md  syntax-cheatsheet.md  tags.md  traits.md  type-identifiers.md  type-inference.md  type-system.md  variable-declaration.md
docs/design/forbidden/: README.md  reflectivity.md
releasing/: build.ts  get-path.test.ts  get-path.ts  version-info.proto  version-info.ts
rust/ast/: Cargo.toml
rust/ast/src/: ast.rs  lib.rs  nodes.rs  parser_input.rs  parser_node.rs
rust/buri_js_lite/: Cargo.toml
rust/buri_js_lite/src/: lib.rs  main.rs
rust/compiler/: Cargo.toml
rust/compiler/src/: lib.rs
rust/concrete_ast/: Cargo.toml
rust/concrete_ast/src/: concrete_types.rs  lib.rs  nodes.rs
rust/e2e/: Cargo.toml
rust/e2e/src/: lib.rs  main.rs
rust/js_backend/: Cargo.toml
rust/js_backend/src/: identifier.rs  imports.rs  lib.rs
rust/mjolnirjs_spark/: Cargo.toml
rust/mjolnirjs_spark/src/: lib.rs  main.rs
rust/parser/: Cargo.toml
rust/parser/src/: basic_expression.rs  binary_operator_expression.rs  binary_operator_or_if.rs  block.rs  document.rs  enum_literal.rs  enum_type.rs  expression_context.rs  file.rs  function.rs  function_argument.rs  function_type.rs  identifier.rs  if_statement.rs  import.rs  indent.rs  integer.rs  intra_expression_whitespace.rs  is_keyword.rs  lib.rs  line.rs  list.rs  list_type.rs  newline.rs  parentheses.rs  record.rs  record_assignment.rs  record_type.rs  string_literal.rs  tag.rs  tag_group_type.rs  tag_identifier.rs  tag_type.rs  type_declaration.rs  type_expression.rs  type_identifier.rs  unary_operator.rs  variable_declaration.rs  when_statement.rs
rust/type_checker/: Cargo.toml
rust/type_checker/errors/: Cargo.toml
rust/type_checker/resolver/: Cargo.toml
rust/type_checker/resolver/src/: lib.rs  resolve_concrete_types.rs
rust/type_checker/src/: apply_constraints.rs  (+10 more)
rust/type_checker/translator/: Cargo.toml
rust/type_checker/translator/src/: apply_constraints.rs  lib.rs  parsed_expression_to_generic_expression.rs
rust/type_checker/types/: Cargo.toml
rust/type_checker/types/src/: constraints.rs  default_types.rs  generic_nodes.rs  lib.rs  parsed_constraint.rs  scope.rs  type_checking_call_stack.rs  type_schema.rs
rust/typed_ast/: Cargo.toml
shared-protos/: buri-version-service.proto  workspace.proto
tests/js/: README.md
(+390 files in other folders)
