[workspace]

members = [
    "rust/ast",
    "rust/compiler",
    "rust/e2e",
    "rust/parser",
    "rust/js_backend",
    "rust/type_checker/errors",
    "rust/type_checker/resolver",
    "rust/type_checker/translator",
    "rust/type_checker/types",
    "rust/typed_ast",
]

[workspace.dependencies]
nom = "7.1.3"
nom_locate = "4.1.0"
walkdir = "2.3.2"
indoc = "2.0.0"

[toolchain]
channel = "1.66.0"
components = ["rustfmt", "clippy", "cargo-cranky"]
