[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
parser = { path = "../parser" }
js_backend = { path = "../js_backend" }
type_checker_translator = { path = "../type_checker/translator" }
type_checker_resolver = { path = "../type_checker/resolver" }
