[package]
name = "type_checker_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../../ast" }
typed_ast = { path = "../../typed_ast" }
type_checker_errors = { path = "../errors" }
